samples/_failures_safe/1761403806_532faf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eeae59bb.c: In function ‘main’:
./samples/SAFE/__tmp_eeae59bb.c:158:17: error: expected declaration or statement at end of input
  158 |                 int status = add_matrices(&a, &b, &result);
      |                 ^~~
./samples/SAFE/__tmp_eeae59bb.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eeae59bb.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eeae59bb.c:158:17: error: expected declaration or statement at end of input
